# Python-web-hw02

./: All commands.txt  Dockerfile  doecker_test.txt  pyproject.toml  requirements.txt
