[tool.poetry]
name = "infinity"
version = "0.1.0"
description = "Home work 02 of Python web course"
authors = ["Mikhailo Ivanov <ivmv2007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
